
 * use payment options (list) for not express mode


2020-03-26

 * removed order review from embed + express mode


2020-03-19

 * fixed express checkout total issue from no shipping country was set and system use different rate than default shipping country
 * removed billing/shipping address from pay form


2020-03-17

 * fixed checkout page display glitches for some specific themes
 * added template for checkout and pay form
 * bug fixed and adjustments


2020-03-10

 * test on each payment conditions
 * fixed on cancel order and display blank page
 * fixed submit and return blank screen when not check "I have read and agree..." on page My Account > Order > Pay
 * fixed when click cancel from Dintero page, it shows thank you page


2020-02-28

 * updated for phpcs compatibilities and minor adjustments

2020-02-27

 * commented out calling previous version of plugin

2020-02-26

 * adjusted display on embed and not-express settings

2020-02-25

 * fixed bugs

2020-02-20

 * updated and fixed bugs

2020-02-18

 * initial updates on woocommerce dintero plugin feature

2020-06-04
 * New Checkout view with improved flow
    a. Collector issue
    B. Vat % issue
    C. Better layout of checkout

2020.06.05
 * Cart Item price issue resolved and Express checkout from cart removed billing address fields

2020.06.05 - 2
 * Payment cancelled issue resolved, Now it redirects to cart page

2020.06.08
 * Refund issue resolved

2020.06.25
 * parameter mismatch warning solved
2020.07.14
  * Delayed callback for backup order creation 
2020.08.14
  * Rounding Off of price issue resolved 

2020.09.21
  * Pause, Update, Resume Session implemented
  * Supports Dynamic Shipping 
  * Discount codes in Callback Issue resolved
  * On_Hold status for collector payment
  * Failed status for Collector Payment
  * Callback delay to 3 minutes to prevent duplicate orders


2020.09.22
  * Destroy Session 
  * create new checkout session if current session is COMPLETED, DECLINED, CANCELLED

